# VPXCompression-Unity

./: README.md
VPXCompression-Unity/: README.md
VPXCompression-Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
VPXCompressionNativePlugin/: CMakeLists.txt  README.md  run-cmake.ps1
VPXCompressionNativePlugin/src/: plugin.cpp  vp8_decoder.cpp  vp8_decoder.h  vp8_encoder.cpp  vp8_encoder.h
